--- a/index.html
+++ b/index.html
@@ -1,43 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
+		<script src="build/build.js" defer></script>
+		<title>Fit In Game</title>
+	</head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js" defer></script>
-    <title>Fit In Game</title>
-</head>
+	<body class="center">
+		<div class="loading" id="loading">
+			Loading tiles...
+			<img src="loading.svg" />
+		</div>
 
-<body class="center">
-    <div class="loading" id="loading">
-        Loading tiles...
-        <img src="loading.svg">
-    </div>
+		<div class="title-container">
+			Sort Puzzle game
+			<button class="restart" id="restart">Restart</button>
+		</div>
 
-    <div class="container center hide" id="container">
-        <div class="tile center" data-x="0" data-y="0" data-value="1">1</div>
-        <div class="tile center" data-x="1" data-y="0" data-value="2">2</div>
-        <div class="tile center" data-x="2" data-y="0" data-value="3">3</div>
-        <div class="tile center" data-x="3" data-y="0" data-value="4">4</div>
-        <!-- -->
-        <div class="tile center" data-x="0" data-y="1" data-value="5">5</div>
-        <div class="tile center" data-x="1" data-y="1" data-value="6">6</div>
-        <div class="tile center" data-x="2" data-y="1" data-value="7">7</div>
-        <div class="tile center" data-x="3" data-y="1" data-value="8">8</div>
-        <!-- -->
-        <div class="tile center" data-x="0" data-y="2" data-value="9">9</div>
-        <div class="tile center" data-x="1" data-y="2" data-value="10">10</div>
-        <div class="tile center" data-x="2" data-y="2" data-value="11">11</div>
-        <div class="tile center" data-x="3" data-y="2" data-value="12">12</div>
-        <!-- -->
-        <div class="tile center" data-x="0" data-y="3" data-value="13">13</div>
-        <div class="tile center" data-x="1" data-y="3" data-value="14">14</div>
-        <div class="tile center" data-x="2" data-y="3" data-value="15">15</div>
-        <div class="tile center" data-x="3" data-y="3" data-value=""></div>
-
-    </div>
-</body>
-
+		<div class="container center hide" id="container">
+			<div class="tile center" data-x="0" data-y="0" data-value="1">
+				1
+			</div>
+			<div class="tile center" data-x="1" data-y="0" data-value="2">
+				2
+			</div>
+			<div class="tile center" data-x="2" data-y="0" data-value="3">
+				3
+			</div>
+			<div class="tile center" data-x="3" data-y="0" data-value="4">
+				4
+			</div>
+			<!-- -->
+			<div class="tile center" data-x="0" data-y="1" data-value="5">
+				5
+			</div>
+			<div class="tile center" data-x="1" data-y="1" data-value="6">
+				6
+			</div>
+			<div class="tile center" data-x="2" data-y="1" data-value="7">
+				7
+			</div>
+			<div class="tile center" data-x="3" data-y="1" data-value="8">
+				8
+			</div>
+			<!-- -->
+			<div class="tile center" data-x="0" data-y="2" data-value="9">
+				9
+			</div>
+			<div class="tile center" data-x="1" data-y="2" data-value="10">
+				10
+			</div>
+			<div class="tile center" data-x="2" data-y="2" data-value="11">
+				11
+			</div>
+			<div class="tile center" data-x="3" data-y="2" data-value="12">
+				12
+			</div>
+			<!-- -->
+			<div class="tile center" data-x="0" data-y="3" data-value="13">
+				13
+			</div>
+			<div class="tile center" data-x="1" data-y="3" data-value="14">
+				14
+			</div>
+			<div class="tile center" data-x="2" data-y="3" data-value="15">
+				15
+			</div>
+			<div class="tile center" data-x="3" data-y="3" data-value=""></div>
+		</div>
+	</body>
 </html>
